# Eastwood

./: .gitignore  CMakeLists.txt  Info.plist  README.md  main.cpp  test_double_ratchet
.github/workflows/: clang-tidy.yml  integration-test.yml  test.yml
cryptography/: DoubleRatchet.cpp  DoubleRatchet.h  x3dh.cpp  x3dh.h
frontend/windows/login/: login.cpp  login.h  login.ui
frontend/windows/register/: register.cpp  register.ui
src/: main.cpp
src/algorithms/: algorithms.cpp  algorithms.h  constants.h
src/api_iteraction/: MakeAuthRequest.cpp
src/auth/: logout.h  salt.cpp  salt.h  set_up_client.cpp  set_up_client.h
src/auth/login/: login.cpp  login.h
src/auth/register_device/: register_device.cpp  register_device.h
src/auth/register_user/: register_user.cpp  register_user.h
src/auth/rotate_master_key/: rotate_master_key.cpp  rotate_master_key.h
src/client_api_interactions/: MakeAuthReq.cpp  MakeAuthReq.h  MakeUnathReq.cpp  MakeUnauthReq.cpp  MakeUnauthReq.h
src/communication/: ReceiveFlow.h
src/communication/revoke_file/: revoke_file.cpp  revoke_file.h
src/communication/send_file_to/: send_file_to.cpp  send_file_to.h
src/communication/upload_file/: upload_file.cpp  upload_file.h
src/database/: database.cpp  database.h  schema.h
src/endpoints/: endpoints.cpp  endpoints.h
src/files/: upload_file.cpp  upload_file.h
src/key_exchange/: CommunicationSession.cpp  CommunicationSession.h  DeviceCommunicationSession.cpp  DeviceCommunicationSession.h  DoubleRatchet.cpp  DoubleRatchet.h  IdentityCommunicationSession.cpp  IdentityCommunicationSession.h  MessageStructs.h  NewRatchet.cpp  NewRatchet.h  XChaCha20-Poly1305.cpp  XChaCha20-Poly1305.h  utils.h  x3dh.cpp  x3dh.h
src/key_exchange/utils/: ConversionUtils.cpp  ConversionUtils.h
src/keys/: kek_manager.cpp  kek_manager.h  secure_memory_buffer.cpp  secure_memory_buffer.h  session_token_manager.cpp  session_token_manager.h
src/libraries/: BaseClient.cpp  BaseClient.h  HTTPSClient.cpp  HTTPSClient.h
src/sessions/: DeviceCommunicationSession.cpp  DeviceCommunicationSession.h  IdentityCommunicationSession.cpp  IdentityCommunicationSession.h  IdentityManager.cpp  IdentityManager.h  IdentitySession.cpp  IdentitySession.h  IdentitySessionId.h  KeyBundle.h  RatchetSessionManager.cpp  RatchetSessionManager.h  SessionManager.cpp  SessionManager.h
src/sql/: queries.h
src/ui/: QRCodeGenerator.cpp  QRCodeGenerator.h  resources.qrc
src/ui/utils/: commons_pass_8_or_more.csv  messagebox.h
src/ui/utils/byte_converter/: byte_convert.cpp  byte_converter.h
src/ui/utils/camera_functionality/: camera_functionality.cpp  camera_functionality.h
src/ui/utils/file_item_widget/: file_item_widget.cpp  file_item_widget.h
src/ui/utils/input_validation/: name_validator.cpp  name_validator.h  passphrase_validator.cpp  passphrase_validator.h
src/ui/utils/navbar/: navbar.cpp  navbar.h  navbar.ui
src/ui/utils/qr_code_generation/: QRCodeGenerator.cpp  QRCodeGenerator.h
src/ui/utils/window_manager/: window_manager.cpp  window_manager.h
src/ui/windows/device_register/: device_register.cpp  device_register.h  device_register.ui
src/ui/windows/login/: login.cpp  login.h  login.ui
src/ui/windows/received_dashboard/: received_dash.cpp  received_dash.h  received_dash.ui
src/ui/windows/register/: register.cpp  register.h  register.ui
src/ui/windows/send_file/: send_file.cpp  send_file.h  send_file.ui
src/ui/windows/sent_dashboard/: sent_dash.cpp  sent_dash.h  sent_dash.ui
src/ui/windows/settings/: settings.cpp  settings.h  settings.ui  settings_ui.py
src/utils/: Cache.h  ConversionUtils.cpp  ConversionUtils.h  JsonParser.cpp  JsonParser.h  url_utils.h  utils.h
test/: device_communication_session_serialization_test.cpp  device_communication_session_test.cpp  double_ratchet_test.cpp  identity_communication_session_test.cpp  identity_session_message_test.cpp  identity_session_test.cpp  integration_main_flow_test.cpp
